Adds services for confession get and post
